all functional branches merged